# sdlc-agent-school

./: .dockerignore  .gitignore  AGENTS.md  IMPLEMENTATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  user_integration.md
.github/workflows/: ci.yml  code_agent.yml  review_agent.yml
docker/: Dockerfile  docker-compose.yml
prompts/: code_generation.txt  code_review.txt  error_analysis.txt  implementation_plan.txt  issue_comment_review.txt  requirements_analysis.txt  review_feedback.txt
src/: __init__.py  cli.py  webhook_server.py
src/agents/: code_agent.py  review_agent.py
src/core/: config.py  git_operations.py  github_app_auth.py  github_client.py  llm_client.py
src/utils/: parsers.py  validators.py
tests/: test_code_agent.py  test_github_client.py  test_llm_client.py  test_review_agent.py
