[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Automated SDLC agent system for GitHub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
